Add API for populating mood chart, interpolate data.
